test/test_examples/syntactic_examples/syntax_error/error_prologue_08.zig
// Syntax error: missing "@import" token

const ifj = @import("ifj24.zig"); 

pub fn main() void {

}  